added responsive design for the buttons and header

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <title>User Cards</title>
 </head>
 <body>
-    <h1>Users</h1>
+    <header>
+        <h1>Users</h1>
+        
+        <div class="buttons">
+            <button id="load-all">Get All Users</button>
+            <button id="load-filtered">Get Users Under 10 Years Experience</button>
+            <button id="clear-cards">Reset</button>
+        </div>
+    </header>
     
-    <div class="buttons">
-        <button id="load-all">Get All Users</button>
-        <button id="load-filtered">Get Users Under 10 Years Experience</button>
-        <button id="clear-cards">Reset</button>
-    </div>
-
     <section id="card-container"></section>
 
     <script src="./js/script.js"></script>
