added the js to fetch data from the API

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     
     <section id="card-container"></section>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
